feat: Add commands for modifying profile.